-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 19
-
Component/s: security-libs
The fix for JDK-8284368 replaced the finalizers in jdk.crypto.cryptoki with Cleaners.
However, there is a problem with the code changes. The Runnables registered with Cleaner refer to the object being registered ('this'). Meaning, the Cleaner mechanism will keep the objects reachable, preventing them from being cleaned and collected.
TheJDK-8284368 change needs to be reworked to not reference 'this'.
However, there is a problem with the code changes. The Runnables registered with Cleaner refer to the object being registered ('this'). Meaning, the Cleaner mechanism will keep the objects reachable, preventing them from being cleaned and collected.
The
- relates to
-
JDK-8253568 Replace and mitigate Object.finalize() uses in JDK libraries
-
- Open
-
-
JDK-8284368 Remove finalizer method in jdk.crypto.cryptoki
-
- Resolved
-